include/httpmorph.h

/* Error codes */
typedef enum {
    HTTPMORPH_OK = 0,
    HTTPMORPH_ERROR_MEMORY = -1,
    HTTPMORPH_ERROR_INVALID_PARAM = -2,
    HTTPMORPH_ERROR_NETWORK = -3,
    HTTPMORPH_ERROR_TLS = -4,
    HTTPMORPH_ERROR_TIMEOUT = -5,
    HTTPMORPH_ERROR_PARSE = -6,
    HTTPMORPH_ERROR_PROTOCOL = -7,
} httpmorph_error_t;
/* HTTP methods */
typedef enum {
    HTTPMORPH_GET,
    HTTPMORPH_POST,
    HTTPMORPH_PUT,
    HTTPMORPH_DELETE,
    HTTPMORPH_HEAD,
    HTTPMORPH_OPTIONS,
    HTTPMORPH_PATCH,
    HTTPMORPH_CONNECT,
} httpmorph_method_t;
/* HTTP version */
typedef enum {
    HTTPMORPH_VERSION_1_0,
    HTTPMORPH_VERSION_1_1,
    HTTPMORPH_VERSION_2_0,
    HTTPMORPH_VERSION_3_0,
} httpmorph_version_t;
typedef struct httpmorph_request httpmorph_request_t;
typedef struct httpmorph_response httpmorph_response_t;
/* Header structure - stores key-value pairs together for better cache locality */
typedef struct {
    char *key;
    char *value;
} httpmorph_header_t;
/* Request structure */
struct httpmorph_request {
    httpmorph_method_t method;
    char *url;
    char *host;
    uint16_t port;
    bool use_tls;

    /* Headers - optimized for cache locality */
    httpmorph_header_t *headers;
    size_t header_count;
    size_t header_capacity;  /* Pre-allocated header capacity */

    /* Body */
    uint8_t *body;
    size_t body_len;

    /* Configuration */
    uint32_t timeout_ms;
    httpmorph_version_t http_version;
    httpmorph_browser_t browser_type;
    char *browser_version;
    bool rotate_fingerprint;

    /* Proxy */
    char *proxy_url;
    char *proxy_username;
    char *proxy_password;

    /* HTTP/2 control */
    bool http2_enabled;

    /* HTTP/2 priority (RFC 7540 Section 5.3) */
    int32_t http2_stream_dependency;  /* Parent stream ID (0 = no dependency) */
    int32_t http2_priority_weight;    /* Priority weight: 1-256 (default: 16) */
    bool http2_priority_exclusive;    /* Exclusive dependency flag */

    /* TLS fingerprinting */
    char *ja3_string;
    char *user_agent;

    /* TLS configuration */
    bool verify_ssl;              /* Verify SSL certificates (default: true) */
    uint16_t min_tls_version;     /* Minimum TLS version (0 = default) */
    uint16_t max_tls_version;     /* Maximum TLS version (0 = default) */
};
/* Response structure */
struct httpmorph_response {
    uint16_t status_code;
    httpmorph_version_t http_version;

    /* Headers - optimized for cache locality */
    httpmorph_header_t *headers;
    size_t header_count;
    size_t header_capacity;  /* Pre-allocated header capacity */

    /* Body */
    uint8_t *body;
    size_t body_len;
    size_t body_capacity;

    /* Internal: Buffer pool tracking (do not access directly) */
    void *_buffer_pool;  /* httpmorph_buffer_pool_t* */
    size_t _body_actual_size;  /* Actual allocated size (for pool return) */

    /* Timing */
    uint64_t connect_time_us;
    uint64_t tls_time_us;
    uint64_t first_byte_time_us;
    uint64_t total_time_us;

    /* TLS info */
    char *tls_version;
    char *tls_cipher;
    char *ja3_fingerprint;

    /* Error */
    httpmorph_error_t error;
    char *error_message;
};
/* Request helpers */

/**
 * Create a new request
 */
httpmorph_request_t* httpmorph_request_create(
    httpmorph_method_t method,
    const char *url
);
/**
 * Destroy a request
 */
void httpmorph_request_destroy(httpmorph_request_t *request);
/**
 * Add header to request
 */
int httpmorph_request_add_header(
    httpmorph_request_t *request,
    const char *key,
    const char *value
);
/**
 * Set request body
 */
int httpmorph_request_set_body(
    httpmorph_request_t *request,
    const uint8_t *body,
    size_t body_len
);
/**
 * Set request timeout in milliseconds
 */
void httpmorph_request_set_timeout(
    httpmorph_request_t *request,
    uint32_t timeout_ms
);
/* Response helpers */

/**
 * Destroy a response
 */
void httpmorph_response_destroy(httpmorph_response_t *response);